--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "got-scraping": "^4.1.2",
     "lru-cache": "^10.0.1",
     "stremio-addon-sdk": "^1.6.8",
     "winston": "^3.11.0",
