--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "lru-cache": "^10.0.1",
+    "p-limit": "^3.1.0",
     "stremio-addon-sdk": "^1.6.8",
+    "undici": "^6.21.0",
     "winston": "^3.11.0",
     "yt-dlp-wrap": "^2.3.10"
   },
