--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ logs.txt
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+renderlogs.txt
 
 # Runtime data
 pids/
@@ -25,6 +26,8 @@ pids/
 # Testing
 coverage/
 .nyc_output/
+copilot-instructions.md
+.github/
 
 # IDE
 .vscode/
