feat: Cloudflare Workers for scalable stream scraping
- Add browser headers to all 3 workers (bypass Cloudflare protection)
- Fix HentaiMama AJAX extraction (extract script contents, use JS object syntax)
- Enable worker-based stream handler in addon
- Add worker deployment documentation
- Add WORKER_* env vars to .env.example

Workers provide infinite scalability with ~5MB memory per request vs 300MB+ on Render.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 PORT=7000
 NODE_ENV=development
 
+# Cloudflare Worker URLs (REQUIRED for stream functionality)
+# Deploy the scrapers from cloudflare-workers/ to your Cloudflare account
+WORKER_HENTAIMAMA=https://your-hentaimama-worker.workers.dev
+WORKER_HENTAISEA=https://your-hentaisea-worker.workers.dev
+WORKER_HENTAITV=https://your-hentaitv-worker.workers.dev
+
 # Cache Configuration (LRU in-memory only)
 CACHE_TTL_CATALOG=3600      # 1 hour
 CACHE_TTL_META=7200          # 2 hours
