--- a/.github/workflows/database-update.yml
+++ b/.github/workflows/database-update.yml
@@ -50,7 +50,7 @@ jobs:
           fi
         env:
           NODE_ENV: production
-          CF_PROXY_URL: https://hentaistream-addon.kkeypop3750.workers.dev/api/proxy
+          CF_PROXY_URL: https://hentaistream-addon.karolis-tankevicius.workers.dev/api/proxy
       
       - name: Run full database build
         if: github.event.inputs.update_type == 'full'
@@ -63,7 +63,7 @@ jobs:
           fi
         env:
           NODE_ENV: production
-          CF_PROXY_URL: https://hentaistream-addon.kkeypop3750.workers.dev/api/proxy
+          CF_PROXY_URL: https://hentaistream-addon.karolis-tankevicius.workers.dev/api/proxy
       
       - name: Check for changes
         id: check_changes
