--- a/cloudflare-workers/wrangler.toml
+++ b/cloudflare-workers/wrangler.toml
@@ -1,7 +1,7 @@
 name = "hentaistream-addon"
 main = "addon-standalone.js"
 compatibility_date = "2024-01-01"
-# account_id configured via wrangler login (same account as animestream-addon)
+account_id = "86d19db2c42c217efb052f975e6eca28"
 
 [vars]
 ENVIRONMENT = "production"
